fixed wrap person sectionn

--- a/styles/blocks/content-desc.css
+++ b/styles/blocks/content-desc.css
@@ -7,3 +7,9 @@
 .content-desc--person-flex {
   flex-direction: row;
 }
+
+@media (max-width: 750px) {
+  .content-desc {
+    flex-wrap: wrap;
+  }
+}
